{
    "name": "TouchScreenInputActions",
    "maps": [
        {
            "name": "Input",
            "id": "46db3850-4261-4f25-8285-c18aa86e247f",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "16e18be4-e1ba-485a-93d5-583835dd0c74",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPhase",
                    "type": "PassThrough",
                    "id": "b899c5ad-c3b1-4836-9445-d4a7f9c5d4c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8cef35af-5747-4410-9d52-266e8831a9bc",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPhase",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a048fe3e-9dba-48b2-b918-288b57009bf2",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}